@@ -51,12 +51,22 @@ export(f0.cigar)
 export(f0.cigar4)
 export(f0.nlnn.rosenbrock2)
 export(f0.periodtuningpp)
+export(f0.periodtuningpp12)
+export(f0.periodtuningpp24)
+export(f0.periodtuningpp48)
+export(f0.periodtuningpp72)
 export(f0.rosenbrock2)
+export(f0.rosenbrock4)
+export(f0.rosenbrockn)
+export(f0.schwefel)
+export(f0.schwefel4)
 export(f0.test)
 export(f1.adtn.rosenbrock2)
 export(f1.cigar)
 export(f1.nlnn.rosenbrock2)
 export(f1.rosenbrock2)
+export(f1.rosenbrockn)
+export(f1.schwefel)
 export(f1.test)
 export(fixdfcolumns)
 export(getFitness)
